Upgrade modular-world test to 0.2 and check generated jars